--- a/trunk/ddscanner/app/src/main/res/values-v21/styles.xml
+++ b/trunk/ddscanner/app/src/main/res/values-v21/styles.xml
@@ -47,4 +47,8 @@
         <item name="colorControlHighlight">#3fff</item>
     </style>
 
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light">
+        <item name="android:padding">10dp</item>
+    </style>
+
 </resources>
