* spinner item left padding + drop down arrow for spinners

--- a/trunk/ddscanner/app/src/main/res/layout/spinner_item.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/spinner_item.xml
@@ -11,5 +11,6 @@
     android:paddingTop="?android:attr/listPreferredItemPaddingLeft"
     android:paddingBottom="?android:attr/listPreferredItemPaddingLeft"
     android:gravity="center_vertical"
+    android:drawableRight="@drawable/dropdown_triangle"
     tools:text="abc"
     android:background="?android:attr/activatedBackgroundIndicator" />
