--- a/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
@@ -398,6 +398,9 @@
             </LinearLayout>
             <ImageView
                 style="@style/DividerStyle" />
+            <TextView
+                android:id="@+id/error_name"
+                style="@style/ValidationErrorTextView" />
             <LinearLayout
                 android:paddingTop="10dp"
                 android:layout_width="match_parent"
@@ -432,6 +435,9 @@
         </LinearLayout>
         <ImageView
             style="@style/DividerStyleFull" />
+        <TextView
+            android:id="@+id/error_about"
+            style="@style/ValidationErrorTextView" />
         <Button
             android:id="@+id/button_save"
             android:layout_margin="20dp"
