+ dive spot editors (not finished)

--- a/trunk/ddscanner/app/src/main/res/values/dimens.xml
+++ b/trunk/ddscanner/app/src/main/res/values/dimens.xml
@@ -21,4 +21,6 @@
     <dimen name="rc_photos_dimen">0px</dimen>
     <dimen name="margin_betweens_blocks">15dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <dimen name="editor_item_height">58dp</dimen>
 </resources>
