* editors and cerator avatar size + expand arrow animation

--- a/trunk/ddscanner/app/src/main/res/layout/item_people.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_people.xml
@@ -1,43 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="58dp"
-    >
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="58dp">
+
     <ImageView
         android:id="@+id/user_avatar"
         android:layout_width="wrap_content"
         android:layout_height="58dp"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
-        android:src="@drawable/avatar_checkin"
-        android:scaleType="center"/>
+        android:scaleType="center"
+        android:src="@drawable/avatar_checkin" />
+
     <LinearLayout
         android:id="@+id/user_data"
-        android:layout_toRightOf="@+id/user_avatar"
         android:layout_width="wrap_content"
         android:layout_height="57dp"
+        android:layout_toRightOf="@+id/user_avatar"
         android:gravity="center_vertical"
         android:orientation="vertical">
+
         <TextView
             android:id="@+id/user_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Andrei lashkevich"
-            android:textSize="16sp"
-            android:textColor="@color/black_text"/>
+            android:textColor="@color/black_text"
+            android:textSize="16sp" />
+
         <TextView
             android:id="@+id/count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="1dp"
             android:text="159reviews, 31 likes"
             android:textColor="#a3a3a3"
-            android:layout_marginTop="1dp"
-            android:textSize="13sp"/>
+            android:textSize="13sp" />
     </LinearLayout>
+
     <ImageView
-        android:layout_toRightOf="@+id/user_avatar"
-        android:layout_below="@+id/user_data"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/user_data"
+        android:layout_toRightOf="@+id/user_avatar"
         android:scaleType="centerCrop"
         android:src="@drawable/divider" />
 </RelativeLayout>
