--- a/trunk/ddscanner/app/src/main/res/layout/item_editor.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_editor.xml
@@ -6,8 +6,8 @@
 
     <ImageView
         android:id="@+id/user_avatar"
-        android:layout_width="wrap_content"
-        android:layout_height="58dp"
+        android:layout_width="@dimen/editor_item_height"
+        android:layout_height="@dimen/editor_item_height"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
         android:scaleType="center"
