--- a/trunk/ddscanner/app/src/main/res/values/dimens.xml
+++ b/trunk/ddscanner/app/src/main/res/values/dimens.xml
@@ -23,4 +23,5 @@
     <dimen name="fab_margin">16dp</dimen>
 
     <dimen name="editor_item_height">58dp</dimen>
+    <dimen name="editor_avatar_radius">16dp</dimen>
 </resources>
