--- a/trunk/ddscanner/app/src/main/res/layout/item_activity.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_activity.xml
@@ -26,7 +26,7 @@
                 android:ellipsize="end"
                 app:layout_widthPercent="70%"
                 android:layout_height="match_parent"
-                android:gravity="center"
+                android:gravity="center_vertical"
                 android:textColor="@color/black_text"
                 android:textSize="15sp"
                 android:paddingBottom="10dp"/>
