Add spot to favorite only when user is logined

--- a/trunk/ddscanner/app/src/main/res/layout/item_notification.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_notification.xml
@@ -19,6 +19,7 @@
             android:scaleType="center"/>
         <android.support.percent.PercentRelativeLayout
             android:id="@+id/content"
+            android:background="?attr/selectableItemBackground"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
         <TextView
