--- a/trunk/ddscanner/app/src/main/res/layout/item_notification.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_notification.xml
@@ -10,13 +10,26 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <RelativeLayout
+            android:layout_width="64dp"
+            android:layout_height="64dp">
         <ImageView
             android:id="@+id/image"
-            android:padding="12dp"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
+            android:layout_centerInParent="true"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:src="@drawable/ic_notif_divespot"
             android:scaleType="center"/>
+            <ImageView
+                android:id="@+id/like_dislike"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp"
+                />
+        </RelativeLayout>
         <android.support.percent.PercentRelativeLayout
             android:id="@+id/content"
             android:background="?attr/selectableItemBackground"
