--- a/trunk/ddscanner/app/src/main/res/layout/item_activity.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_activity.xml
@@ -9,7 +9,8 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="?attr/selectableItemBackground">
         <ImageView
             android:id="@+id/image"
             android:layout_width="64dp"
@@ -18,7 +19,6 @@
             android:scaleType="center"/>
         <android.support.percent.PercentRelativeLayout
             android:id="@+id/content"
-            android:background="?attr/selectableItemBackground"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <TextView
