--- a/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
@@ -8,7 +8,7 @@
 <ScrollView
     android:layout_width="match_parent"
     android:id="@+id/about"
-    android:visibility="gone"
+    android:visibility="visible"
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -128,15 +128,16 @@
         android:layout_marginTop="15dp"
         style="@style/DividerStyleFull"/>
     <LinearLayout
-        android:paddingTop="15dp"
         android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
         <LinearLayout
             android:id="@+id/checkins_activity"
+            android:paddingTop="10dp"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
+            android:layout_height="55dp"
+            android:background="?attr/selectableItemBackground"
             android:orientation="horizontal">
             <ImageView
                 android:layout_height="wrap_content"
@@ -166,10 +167,11 @@
             style="@style/DividerStyle"/>
         <LinearLayout
             android:id="@+id/created_activity"
-            android:layout_marginTop="10dp"
+            android:paddingTop="10dp"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:orientation="horizontal">
+            android:layout_height="55dp"
+            android:orientation="horizontal"
+            android:background="?attr/selectableItemBackground">
             <ImageView
                 android:layout_height="wrap_content"
                 style="@style/CharacteristicsDiveSpotListIcons"
@@ -198,10 +200,11 @@
             style="@style/DividerStyle"/>
         <LinearLayout
             android:id="@+id/edited_activity"
-            android:layout_marginTop="10dp"
+            android:paddingTop="10dp"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:orientation="horizontal">
+            android:layout_height="55dp"
+            android:orientation="horizontal"
+            android:background="?attr/selectableItemBackground">
             <ImageView
                 android:layout_height="wrap_content"
                 style="@style/CharacteristicsDiveSpotListIcons"
@@ -230,10 +233,11 @@
             style="@style/DividerStyle"/>
         <LinearLayout
             android:id="@+id/favorites_activity"
-            android:layout_marginTop="10dp"
+            android:paddingTop="10dp"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:orientation="horizontal">
+            android:layout_height="55dp"
+            android:orientation="horizontal"
+            android:background="?attr/selectableItemBackground">
             <ImageView
                 android:layout_height="wrap_content"
                 style="@style/CharacteristicsDiveSpotListIcons"
