--- a/trunk/ddscanner/app/src/main/res/layout/item_product_swipable.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_product_swipable.xml
@@ -1,49 +1,9 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:swipe="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/swipe"
+<RelativeLayout android:id="@+id/container"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    swipe:leftEdgeSwipeOffset="0dp"
-    swipe:rightEdgeSwipeOffset="0dp">
-    <LinearLayout
-        android:id="@+id/bottom_wrapper"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:weightSum="1">
-
-        <ImageButton
-            android:id="@+id/btnLocation"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@null"
-            android:gravity="center" />
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/bottom_wrapper1"
-        android:layout_width="118dp"
-        android:layout_height="match_parent"
-        android:background="#ed1b24"
-        android:weightSum="3">
-        <TextView
-            android:id="@+id/delete"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="DELETE"
-            android:gravity="center"
-            android:background="@android:color/transparent"
-            android:textColor="@color/white"
-            android:fontFamily="sans-serif-medium"
-            android:textSize="17sp"
-            />
-
-    </LinearLayout>
-    <RelativeLayout
-        android:id="@+id/container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/white">
+    android:layout_height="82dp"
+    android:background="@color/white"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
         <ImageView
             android:transitionName="image"
@@ -105,4 +65,3 @@
             android:layout_height="wrap_content"
             android:src="@drawable/divider"/>
     </RelativeLayout>
-</com.daimajia.swipe.SwipeLayout>
