--- a/trunk/ddscanner/app/src/main/res/layout/item_activity.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_activity.xml
@@ -12,9 +12,10 @@
         android:layout_height="match_parent"
         android:background="?attr/selectableItemBackground">
         <ImageView
+            android:layout_margin="12dp"
             android:id="@+id/image"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:src="@drawable/ic_notif_divespot"
             android:scaleType="center"/>
         <android.support.percent.PercentRelativeLayout
