--- a/trunk/ddscanner/app/src/main/res/layout/dive_sites_map_fragment.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/dive_sites_map_fragment.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.google.android.gms.maps.MapView xmlns:android="http://schemas.android.com/apk/res/android"
+    <com.google.android.gms.maps.MapView
         android:id="@+id/mapView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
