--- a/trunk/ddscanner/app/src/main/res/layout/fragment_maplist.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_maplist.xml
@@ -57,26 +57,6 @@
                 android:src="@drawable/ic_my_location" />
         </RelativeLayout>
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/map_list_fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_gravity="bottom|left"
-            android:layout_margin="14dp"
-            android:src="@drawable/ic_acb_list"
-            app:backgroundTint="@color/white" />
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/add_ds_fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_gravity="bottom|right"
-            android:layout_margin="14dp"
-            android:src="@drawable/ic_acb_plus"
-            app:backgroundTint="@color/orange" />
-
         <RelativeLayout
             android:layout_gravity="bottom"
             android:id="@+id/dive_spot_info_layout"
@@ -137,13 +117,13 @@
         android:orientation="vertical"
         android:visibility="gone">
 
-        <!--<android.support.v7.widget.RecyclerView-->
-            <!--android:id="@+id/cv"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:padding="5dp"-->
-            <!--android:scrollbars="vertical"-->
-            <!--android:visibility="gone" />-->
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/cv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:scrollbars="vertical"
+            android:visibility="gone" />
 
         <RelativeLayout
             android:id="@+id/please"
@@ -171,26 +151,6 @@
                 android:textColor="#939393"
                 android:textSize="18sp" />
         </RelativeLayout>
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@id/map_list_fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_margin="14dp"
-            android:src="@drawable/ic_acb_map"
-            app:backgroundTint="@color/white" />
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@id/add_ds_fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_margin="14dp"
-            android:src="@drawable/ic_acb_plus"
-            app:backgroundTint="@color/orange" />
     </RelativeLayout>
 
     <ProgressBar
@@ -222,4 +182,25 @@
             android:text="Please zoom in to see dive spots"
             android:textSize="16sp" />
     </RelativeLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/map_list_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="14dp"
+        android:src="@drawable/ic_acb_list"
+        app:backgroundTint="@color/white" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/add_ds_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="14dp"
+        android:src="@drawable/ic_acb_plus"
+        app:backgroundTint="@color/orange" />
+
 </RelativeLayout>
