--- a/trunk/ddscanner/app/src/main/res/layout/activity_no_internet.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_no_internet.xml
@@ -19,7 +19,7 @@
             android:layout_below="@+id/icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="No internet connection"
+            android:text="@string/error_no_internet"
             android:textSize="16sp"
             android:textColor="@color/black_text"
             android:layout_centerHorizontal="true"/>
