--- a/trunk/ddscanner/app/src/main/res/layout/fragment_maplist.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_maplist.xml
@@ -90,6 +90,7 @@
                 android:orientation="horizontal" />
 
             <TextView
+                android:id="@+id/object"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/rating"
