--- a/trunk/ddscanner/app/src/main/res/layout/product_item.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/product_item.xml
@@ -56,6 +56,7 @@
                 android:layout_marginTop="3dp"
                 android:orientation="horizontal"/>
             <TextView
+                android:id="@+id/object"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/stars"
