--- a/trunk/ddscanner/app/src/main/res/menu/menu_pick_location.xml
+++ b/trunk/ddscanner/app/src/main/res/menu/menu_pick_location.xml
@@ -7,6 +7,6 @@
     <item
         android:id="@+id/serch_picking_location"
         android:orderInCategory="100"
-        android:icon="@drawable/ic_actionbar_search_2"
+        android:icon="@drawable/ic_ac_search"
         app:showAsAction= "ifRoom"/>
 </menu>
